Fix validator label in dark mode

--- a/tablet_qt/resources/camcops/stylesheets/validatinglineedit.css
+++ b/tablet_qt/resources/camcops/stylesheets/validatinglineedit.css
@@ -8,3 +8,7 @@
     background-color: rgb(255, 0, 0);
     color: rgb(255, 255, 255);
 }
+
+#validatorfeedbackdark {
+    color: black;
+}
